weekly_routes.py modified

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ data/base_data_FromTrainedData.csv
 data/base_data_generated.csv
 data/base-data.csv
 data/FinalPorjectData.csv
+static/logo.svg
+data/base_data_test.xlsx
+data/Pictures - Shortcut.lnk
+weekly_AFN_with_XGBoost.txt
